Add conclusions and further work notes, detail inverse CDF and besoke sampling

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -887,3 +887,18 @@
   langid = {english},
   file = {/home/artem/Zotero/storage/U2SF4K5S/Cockayne and Duncan - 2021 - Probabilistic Gradients for Fast Calibration of Di.pdf}
 }
+
+@book{robertMonteCarloStatistical2004,
+  title = {Monte {{Carlo Statistical Methods}}},
+  author = {Robert, Christian P. and Casella, George},
+  year = {2004},
+  series = {Springer {{Texts}} in {{Statistics}}},
+  edition = {2nd},
+  publisher = {Springer},
+  address = {New York},
+  doi = {10.1007/978-1-4757-4145-2},
+  urldate = {2024-08-28},
+  copyright = {http://www.springer.com/tdm},
+  isbn = {978-1-4419-1939-7 978-1-4757-4145-2},
+  file = {/home/artem/Zotero/storage/V3US9VCF/Robert and Casella - 2004 - Monte Carlo Statistical Methods.pdf}
+}
