--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -902,3 +902,19 @@
   isbn = {978-1-4419-1939-7 978-1-4757-4145-2},
   file = {/home/artem/Zotero/storage/V3US9VCF/Robert and Casella - 2004 - Monte Carlo Statistical Methods.pdf}
 }
+
+@book{ruppertStatisticsDataAnalysis2015,
+  title = {Statistics and {{Data Analysis}} for {{Financial Engineering}}: With {{R}} Examples},
+  shorttitle = {Statistics and {{Data Analysis}} for {{Financial Engineering}}},
+  author = {Ruppert, David and Matteson, David S.},
+  year = {2015},
+  edition = {2nd},
+  publisher = {Springer},
+  address = {New York},
+  doi = {10.1007/978-1-4939-2614-5},
+  urldate = {2024-08-28},
+  copyright = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+  isbn = {978-1-4939-2613-8 978-1-4939-2614-5},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/H2C8ZSWA/Ruppert and Matteson - 2015 - Statistics and Data Analysis for Financial Enginee.pdf}
+}
