--- a/report/main.tex
+++ b/report/main.tex
@@ -417,7 +417,7 @@ For the KDE estimator, we choose the Gaussian kernel with bandwidth selected acc
 
 The results are shown in Figure~\ref{fig:gmm:thinned}. The failure of the Laplace proxy is striking, so we investigate it further. The other methods produce visually sensible results. One can notice some clustering of points selected by na\"ive thinning, whereas the Stein thinning and the gradient-free approach using the Gaussian proxy and the KDE proxy appear to spread points more evenly.
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{
 	\includegraphics[width=1.0\textwidth]{gaussian-mixture-thinned-20.pdf}
@@ -528,8 +528,6 @@ We follow \cite{riabizOptimalThinningMCMC2022} in selecting the starting values 
 
 Since the parameters of the Lotka-Volterra model are non-negative, we run inference in the log-space. The trace plots from running 500,000 iterations of the random-walk Metropolis-Hastings algorithm for each chain are shown in Figure~\ref{fig:lotka-volterra:trace-plots}. Figure~\ref{fig:lotka-volterra:chain-paths} confirms that all chains reach the high-probability region, albeit after considerable burn-in, and Figure~\ref{fig:lotka-volterra:chain1-sample} demonstrates the sample obtained from the first chain. Having obtained samples from the posterior distribution, we proceed to thin them.
 
-\todo[inline]{Add example sample, e.g. from the first chain.}
-
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
@@ -598,6 +596,22 @@ The results of applying Stein thinning are shown in Figure~\ref{fig:lotka-volter
 
 \paragraph{Gradient-free Stein thinning.} The KDE proxy, which performed best for the Gaussian mixture in Section~\ref{sec:gaussian-mixture}, becomes computationally infeasible here due to the size of the sample. Indeed, if KDE is built based on the entire sample, and is evaluated for each point of the sample, the resulting computational cost grows as $O(n^2)$, where $n$ is the sample size. One could try to build a KDE based on a subsample of size $m < n$, however if the computational budget is fixed (i.e. $mn = \text{const}$) then larger $n$ implies lower $m$ and thus inferior approximation of the target density.
 
+As in the case of the Gaussian mixture, the Laplace approximation fails to produce a thinned sample here due to ratio $q(x) / p(x)$ vanishing away from the mode. Instead, we attempt to use the Student's $t$ distribution, which exhibits polynomially-decaying tails. To select the parameters of the $t$ distribution, we perform numerical optimisation in the spirit of Section 7.13.3 of \cite{ruppertStatisticsDataAnalysis2015}. As an alternative strategy, we also evaluate the following configuration: set the location of the Student's $t$ distribution to be the mode of the sample (i.e. the point with the highest target probability), set the scale parameter to the sample covariance multiplied by 3, and the degrees of freedom parameter to 4. The values were hand-picked by trial and error to achieve smaller resulting energy distance.
+
+Figure~\ref{fig:lotka-volterra:gf-thinning:energy-distance} shows that our hand-picked choice of the proxy out-performs the gradient-based approach in terms of energy distance, while the optimised choice comes fares worse, in fact coming out worse than the na\"ive thinning for the first chain. While it is surprising that the gradient-free approach being an approximation of the gradient-based algorithm ends up beating it on energy distance, we note that the energy distance looks at the similarity of distribution from a different angle compared to the KSD, so the two are not necessarily maximised by the same configuration. 
+
+\todo[inline]{Plot KSD and check that the hand-picked version is worse than the gradient-based approach.}
+
+\begin{figure}[h]
+\centering
+\makebox[\textwidth][c]{
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-energy-distance.pdf}
+}
+\caption{Energy distance comparison between gradient-free and standard Stein thinning for the Lotka-Volterra inverse problem.
+\label{fig:lotka-volterra:gf-thinning:energy-distance}}
+\end{figure}
+
+Echoing the observations from the preceding section, we conclude that a good choice of the proxy distribution is key for successfully applying the gradient-free algorithm. It becomes clear, however, that a good choice might be difficult to make in practice, as it relies on the MCMC sample itself to guide the choice. Alternative measures of quality, such as the energy distance, might also be unavailable for larger samples, as was the case in the cardiac inference reported by \cite{riabizOptimalThinningMCMC2022}.
 
 \chapter{Conclusions and Further Work}
 \label{sec:conclusions}
