Add abstract to the report

--- a/report/main.tex
+++ b/report/main.tex
@@ -71,6 +71,8 @@ United Kingdom\\
 
 \chapter*{Abstract}
 
+The dissertations reports the results of implementing the gradient-free kernel Stein discrepancy of \cite{fisherGradientFreeKernelStein2024} within the Stein thinning algorithm by \cite{riabizOptimalThinningMCMC2022}. We evaluate the performance of the proposed algorithm using samples from a Gaussian mixture and the Lotka-Volterra inference problem. The results confirm the feasibility of the proposed algorithm and highlight its primary limitation: the reliance on the auxiliary proxy distribution that needs to be provided by the user.
+
 
 \tableofcontents
 
